Go back from URL to URI, as equals() might resolve names in URL implementation