@@ -294,7 +294,7 @@ public class ContentSyncManager {
                 log.error("Error getting products for " +
                         c.getUsername() + ", " + e.getMessage());
             }
-            catch (MalformedURLException e1) {
+            catch (URISyntaxException e1) {
                 log.error("Invalid URL:" + e1.getMessage());
             }
         }
@@ -612,7 +612,7 @@ public class ContentSyncManager {
                 log.error("Error getting repos for " + c.getUsername() +
                         ": " + e.getMessage());
             }
-            catch (MalformedURLException e1) {
+            catch (URISyntaxException e1) {
                 log.error("Invalid URL:" + e1.getMessage());
             }
         }
@@ -641,7 +641,7 @@ public class ContentSyncManager {
             SCCClient scc = this.getSCCClient(user, password);
             return scc.listSubscriptions();
         }
-        catch (MalformedURLException e1) {
+        catch (URISyntaxException e1) {
             log.error("Invalid URL:" + e1.getMessage());
             return new ArrayList<SCCSubscription>();
         }
@@ -1661,15 +1661,15 @@ public class ContentSyncManager {
      *
      * @param user network credential: user
      * @param password networ credential: password
-     * @throws MalformedURLException if the URL in configuration file is malformed
+     * @throws URISyntaxException if the URL in configuration file is malformed
      * @throws SCCClientException
      * @return {@link SCCWebClient}
      */
     private SCCClient getSCCClient(String user, String password)
-            throws MalformedURLException,
+            throws URISyntaxException,
                    SCCClientException {
         // check that URL is valid
-        URL url = new URL(Config.get().getString(ConfigDefaults.SCC_URL));
+        URI url = new URI(Config.get().getString(ConfigDefaults.SCC_URL));
 
         String localPath = Config.get().getString(ContentSyncManager.RESOURCE_PATH, null);
         String localAbsolutePath = null;
